--- a/react-project/src/assets/styles/App.scss
+++ b/react-project/src/assets/styles/App.scss
@@ -1,7 +1,8 @@
 @import './general';
 
 .main {
-  height: fit-content;
+  height: 73vh;
+ // height: fit-content;
   font-family: $quicksand;
   font-weight: $regular;
   font-size: 1.7vw;
