--- a/react-project/src/components/Footer/footer.scss
+++ b/react-project/src/components/Footer/footer.scss
@@ -1,8 +1,8 @@
-@import './general';
+@import '../general';
 
 .footer{
     height: 10vw;
-    background-color: $russet;
+    background-color: $light-green;
     font-family: $quicksand;
     font-weight: $medium;
     font-size: 2vw;
