--- a/react-project/src/components/general.scss
+++ b/react-project/src/components/general.scss
@@ -9,15 +9,25 @@ $medium: 500;
 $semibold: 600;
 $bold: 700;
 
+$dark-green: #758650;
+$light-green: #b5c267;
+$lemon: #ffe27c;
+$dark-yellow: #e8b634;
+$light-grey: #f8f9f8;
+$dark-beige: #c9b6a1;
+
 $camel: #b99470;
 $cornsilk: #FEFAE0;
 $alloy-orange: #c4661f;
 $russet: #783d19;
 $lemon-light: #f9ebc7;
 $dark-olive: #5f6f52;
-$light-green: #a9b388;
+$light-olive: #a9b388;
 $light-beige: #f4efe8;
 $white: #fffdfb;
+
+$light-red: #f39b80;
+$beige-pink: #efd2c3;
 
 button {
     cursor: pointer;
