--- a/react-project/src/components/CardSlider/cardSlider.scss
+++ b/react-project/src/components/CardSlider/cardSlider.scss
@@ -1,4 +1,5 @@
 @import '../general';
+@import '../Buttons/listButtons';
 
 .flashcards-container{
     display: flex;
@@ -7,11 +8,18 @@
     align-items: center;
     padding-bottom: 5%;
     overflow: hidden;
-    
+    column-gap: 6vw;
 }
 
 .inner{
     white-space: nowrap;
     transition: transform 0.3s;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+}
+
+.button-arrow-left{
+    @include arrow($light-red);
+}
+.button-arrow-right{
+    @include arrow($dark-yellow);
 }
