--- a/react-project/src/components/CardSlider/cardSlider.scss
+++ b/react-project/src/components/CardSlider/cardSlider.scss
@@ -6,7 +6,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-bottom: 5%;
+    padding: 5% 0 5% 0;
     overflow: hidden;
     column-gap: 6vw;
 }
