--- a/react-project/src/components/Flashcard/flashcard.scss
+++ b/react-project/src/components/Flashcard/flashcard.scss
@@ -46,3 +46,32 @@ color: $dark-olive;
 border: none;
 }
 
+@media screen and (min-width: 700px) and (max-width: 1399px) {
+    .flashcard__english{
+        font-size: 3.5vw;
+    }
+    .flashcard__transcription{
+        font-size: 2.3vw;
+    }
+    .flashcard__russian{
+        font-size: 3vw;
+    }
+    .flashcard__button{
+        font-size: 2vw;
+    }
+}
+
+@media screen and (max-width: 699px){
+    .flashcard__english{
+        font-size: 5vw;
+    }
+    .flashcard__transcription{
+        font-size: 3.2vw;
+    }
+    .flashcard__russian{
+        font-size: 4vw;
+    }
+    .flashcard__button{
+        font-size: 3vw;
+    }
+}
