--- a/react-project/src/components/Header/header.scss
+++ b/react-project/src/components/Header/header.scss
@@ -1,10 +1,88 @@
 @import '../general';
+@mixin hover-menu($color) {
+    cursor: pointer;
+    color: $color;
+    transform: scale(1.1);
+    transition: color 0.5s, transform 0.5s;
+}
 
 .header{
-    height: 13vw;
     background-color: $dark-beige;
     font-family: $quicksand;
     font-weight: $semibold;
     font-size: 2vw;
     color: $white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top:0;
+}
+
+.logo{
+    display: inline-block;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 7%;
+    height: 7%;
+    padding-left: 5%;
+    &:hover{
+        cursor: pointer;
+    }
+}
+.logo__img{
+    width:90%;
+    height:100%;
+    object-fit: cover;
+    background-color: none;
+}
+.navigation{
+padding-right: 10%;
+font-size: 2.3vw;
+}
+.navigation__list{
+display: flex;
+flex-direction: row;
+column-gap: 30%;
+}
+.navigation__list__item{
+    list-style-type: none;
+    color: $white;
+    text-decoration: none;
+}
+.navigation-link{
+    color: $white;
+    text-decoration: none;
+}
+.navigation-link--home{
+    &:hover{
+        @include hover-menu($lemon);
+    }
+}
+.navigation-link--cards{
+    &:hover{
+        @include hover-menu($dark-green);
+    }
+}
+
+
+@media screen and (min-width: 700px) and (max-width: 1399px) {
+    .logo {
+        width: 8.3%;
+        height: 8.3%;
+    }
+    .navigation{
+        font-size: 2.5vw;
+    }
+
+}
+@media screen and (max-width: 699px) {
+    .logo {
+        width: 14%;
+        height: 14%;
+    }
+    .navigation{
+        font-size: 4vw;
+    }
 }
