--- a/react-project/src/components/CardSlider/cardSlider.scss
+++ b/react-project/src/components/CardSlider/cardSlider.scss
@@ -6,7 +6,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 5% 0 5% 0;
+    padding: 5% 0 2% 0;
     overflow: hidden;
     column-gap: 6vw;
 }
@@ -17,9 +17,26 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
 }
 
+.word-counter{
+    text-align: center;
+    padding:2% 0 3% 0;
+    margin: 0;
+}
+
 .button-arrow-left{
     @include arrow($light-red);
 }
 .button-arrow-right{
     @include arrow($dark-yellow);
+}
+
+@media screen and (min-width: 700px) and (max-width: 1399px) {
+    .word-counter{
+        font-size: 2.3vw;  
+    }
+}
+@media screen and (max-width: 699px) {
+    .word-counter{
+        font-size: 3.8vw;  
+    }
 }
