--- a/react-project/src/components/Header/header.scss
+++ b/react-project/src/components/Header/header.scss
@@ -54,6 +54,18 @@ column-gap: 30%;
         transition: transform 0.5s;
     }
 }
+
+.item--home{
+    .active{
+        color: $lemon;
+    }
+}
+.item--cards{
+    .active{
+        color: $dark-green;
+    }
+}
+
 .navigation-link{
     color: $white;
     text-decoration: none;
