--- a/react-project/src/App.scss
+++ b/react-project/src/App.scss
@@ -1,10 +1,17 @@
 @import './components/general';
 
 .main {
-  height: fit-content;
+  text-align: center;
   font-family: $quicksand;
   font-weight: $regular;
   font-size: 1.7vw;
   background-color: $light-grey;
+};
+
+
+@media screen and (min-width: 1440px){
+  .main{
+    padding: 0 5% 0 5%;
+  }
 }
 
