loading_animation_added

--- a/react-project/src/components/general.scss
+++ b/react-project/src/components/general.scss
@@ -9,6 +9,8 @@ $medium: 500;
 $semibold: 600;
 $bold: 700;
 
+$colorCircle: #FFEBCD, #FFEC8B, #FFDC33, #FFCC00, #FFA812; 
+
 $dark-green: #758650;
 $light-green: #b5c267;
 $lemon: #ffe27c;
