--- a/react-project/src/components/WordList/wordList.scss
+++ b/react-project/src/components/WordList/wordList.scss
@@ -79,6 +79,55 @@
 
 .add-btn{
     @include word-list-button ($camel, $camel, $cornsilk);
+};
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.circle {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:before {
+        content: "";
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        opacity: 0.7;
+        animation: scale 2s infinite 
+            cubic-bezier(0, 0, 0.49, 1.02);
+    }
+}
+
+@for $i from 1 through 5 {
+    .circle-#{$i} {
+    background-color: nth($colorCircle, $i);
+    &:before {
+        background-color: nth($colorCircle, $i);
+      animation-delay: 200ms * $i;
+    }
+    }
+}
+@keyframes scale {
+    0% {
+    transform: scale(1);
+}
+    50%, 75% {
+    transform: scale(2.5);
+}
+    78%, 100% {
+    opacity: 0;
+}
 }
 
 
