--- a/react-project/src/App.scss
+++ b/react-project/src/App.scss
@@ -6,12 +6,15 @@
   font-weight: $regular;
   font-size: 1.7vw;
   background-color: $light-grey;
+  margin: auto 0;
 };
+
 
 
 @media screen and (min-width: 1440px){
   .main{
     padding: 0 5% 0 5%;
-  }
+  };
+  
 }
 
