--- a/react-project/src/index.scss
+++ b/react-project/src/index.scss
@@ -4,7 +4,14 @@ body {
   padding: 0;
   min-height: 100vh;
   overflow-x: hidden;
+  background-color: $light-grey;
 }
+
+#root{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+};
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
